[gd_scene load_steps=4 format=3 uid="uid://ruh4j2qq3qid"]

[ext_resource type="Texture2D" uid="uid://r4le6dvr5pj1" path="res://icon.svg" id="1_6tnj1"]
[ext_resource type="Script" path="res://mob/mob.gd" id="1_07r8f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0clf"]
size = Vector2(120, 117)

[node name="MOB" type="Area2D"]
position = Vector2(4, 0)
script = ExtResource("1_07r8f")

[node name="SpriteA" type="Sprite2D" parent="."]
position = Vector2(-66, -65)
texture = ExtResource("1_6tnj1")

[node name="CollisionC" type="CollisionShape2D" parent="."]
position = Vector2(-66, -64)
shape = SubResource("RectangleShape2D_b0clf")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-14, -12)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
